# decklist_analyzer

./: CMakeLists.txt  README.md
inc/: Analyzer.h
src/: Analyzer.cpp  main.cpp
tests/: AnalyzerTests.cpp
